# qrcoffee

./: README.md  config.py  docker-compose.yml  pyproject.toml  st.py
DataBase/: core.py
DataBase/methods/: baseMethods.py  user.py
DataBase/models/: models.py
alembic/: env.py
alembic/versions/: 5596d8df1207_initial_tables.py  7f0b4a121b49_initial_tables2.py  80101d94ad07_v2_0.py  8ca9d76b510d_db_1_0.py
bot/: alembic.ini  bot_start.py  config.py  database.db  pyproject.toml  test.py
bot/DataBase/methods/: baseMethods.py
bot/DataBase/models/: models.py
bot/Keyboards/default/: sections.py  services.py
bot/StormTgt/: comands.py  handler_template.py  handlers_autoadd.py  lconfig.py  loging_.py  stormtgt.py
bot/StormTgt/middleware/db_logic/: db.py
bot/alembic/: env.py
bot/alembic/versions/: 218f70fd2a43_bd_init.py  ce911c6a9fad_описание_изменений.py
bot/handlers/: __init__.py  start.py  test.py
