[project]
name = "aiogram-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Arseniy",email = "senylar803@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "greenlet (>=3.2.2,<4.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "alembic (>=1.16.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
